--- a/mediaalbum/src/main/res/values/colors.xml
+++ b/mediaalbum/src/main/res/values/colors.xml
@@ -1,6 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    Copyright 2018 Seo Jeonggyu.
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+        http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="mediaColorPrimary">#2196F3</color>
+    <color name="mediaColorPrimaryDark">#1E88E5</color>
+    <color name="mediaColorPrimaryBlack">#2B2B2B</color>
+
+    <color name="mediaPageLight">#FFF</color>
+    <color name="mediaTransparent">#0000</color>
+
+    <color name="mediaFontHint">#808080</color>
+    <color name="mediaFontLight">#FFF</color>
+    <color name="mediaFontDark">#333</color>
+
+    <color name="mediaIconDark">#333</color>
+    <color name="mediaLoadingDark">#333</color>
+    <color name="mediaSelectorNormal">#E0E0E0</color>
+
+    <color name="mediaSheetBottom">#992B2B2B</color>
+    <color name="mediaSheetLayer">#EE2B2B2B</color>
 </resources>
