--- a/mediaalbum/src/main/res/values/styles.xml
+++ b/mediaalbum/src/main/res/values/styles.xml
@@ -1,11 +1,183 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!--
+    Copyright 2018 Seo Jeonggyu.
+
+    Licensed under the Apache License, Version 2.0 (the "License");
+    you may not use this file except in compliance with the License.
+    You may obtain a copy of the License at
+
+        http://www.apache.org/licenses/LICENSE-2.0
+
+    Unless required by applicable law or agreed to in writing, software
+    distributed under the License is distributed on an "AS IS" BASIS,
+    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+    See the License for the specific language governing permissions and
+    limitations under the License.
+-->
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+    <style name="MediaAlbum"/>
+
+    <style name="MediaAlbum.Theme" />
+
+    <style name="MediaAlbum.Theme.Activity" parent="@style/Theme.AppCompat.Light.DarkActionBar">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowDisablePreview">true</item>
+        <item name="android:windowBackground">@color/albumTransparent</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="MediaAlbum.Theme.Activity.Transparent">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+
+    <style name="MediaAlbum.MatchParent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="MediaAlbum.MatchParent.SheetBottom">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/album_dp_45</item>
+    </style>
+
+    <style name="MediaAlbum.WrapContent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="MediaAlbum.WrapContent.WidthMatchParent">
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <style name="MediaAlbum.WrapContent.Transfer">
+        <item name="android:clickable">true</item>
+        <item name="android:padding">@dimen/album_dp_10</item>
+    </style>
+
+    <style name="MediaAlbum.AppBar">
+        <item name="android:background">@color/albumTransparent</item>
+    </style>
+
+    <style name="MediaAlbum.AppBar.General">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="MediaAlbum.AppBar.General.Transparent">
+        <item name="elevation">@dimen/album_dp_0</item>
+    </style>
+
+    <style name="MediaAlbum.Theme.Toolbar" />
+
+    <style name="MediaAlbum.Theme.Toolbar.Dark" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="actionMenuTextColor">@color/albumFontLight</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="MediaAlbum.Theme.Toolbar.Light" parent="ThemeOverlay.AppCompat.Light">
+        <item name="actionMenuTextColor">@color/albumFontDark</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="MediaAlbum.Theme.Toolbar.Popup" parent="ThemeOverlay.AppCompat.Light">
+        <item name="actionMenuTextColor">@color/albumFontDark</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="MediaAlbum.Toolbar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="popupTheme">@style/Album.Theme.Toolbar.Popup</item>
+    </style>
+
+    <style name="MediaAlbum.Toolbar.Dark">
+        <item name="android:theme">@style/Album.Theme.Toolbar.Dark</item>
+        <item name="titleTextColor">@color/albumFontLight</item>
+        <item name="subtitleTextColor">@color/albumFontLight</item>
+    </style>
+
+    <style name="MediaAlbum.Toolbar.Light">
+        <item name="android:theme">@style/Album.Theme.Toolbar.Light</item>
+        <item name="titleTextColor">@color/albumFontDark</item>
+        <item name="subtitleTextColor">@color/albumFontDark</item>
+    </style>
+
+    <style name="MediaAlbum.Item" />
+
+    <style name="MediaAlbum.Item.Card">
+        <item name="android:foreground">?selectableItemBackground</item>
+        <item name="cardCornerRadius">@dimen/album_dp_2</item>
+        <item name="cardElevation">@dimen/album_dp_2</item>
+        <item name="cardPreventCornerOverlap">false</item>
+    </style>
+
+    <style name="MediaAlbum.Item.Card.MatchParent">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <style name="MediaAlbum.CheckBox" parent="Widget.AppCompat.CompoundButton.CheckBox" />
+
+    <style name="MediaAlbum.CheckBox.WrapContent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="MediaAlbum.Dialog" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:backgroundDimEnabled">true</item>
+    </style>
+
+    <style name="MediaAlbum.Dialog.Folder">
+        <item name="android:windowBackground">@color/albumTransparent</item>
+        <item name="android:windowIsFloating">false</item>
+        <item name="android:windowFullscreen">true</item>
+    </style>
+
+    <style name="MediaAlbum.Progress" parent="Widget.AppCompat.ProgressBar" />
+
+    <style name="MediaAlbum.Progress.Loading">
+        <item name="android:minWidth">@dimen/album_dp_40</item>
+        <item name="android:maxWidth">@dimen/album_dp_40</item>
+        <item name="android:minHeight">@dimen/album_dp_40</item>
+        <item name="android:maxHeight">@dimen/album_dp_40</item>
+        <item name="android:layout_width">@dimen/album_dp_40</item>
+        <item name="android:layout_height">@dimen/album_dp_40</item>
+    </style>
+
+    <style name="MediaAlbum.Theme.Button" parent="@style/Theme.AppCompat.Light" />
+
+    <style name="MediaAlbum.Button" parent="Widget.AppCompat.Button">
+        <item name="android:theme">@style/Album.Theme.Button</item>
+    </style>
+
+    <style name="MediaAlbum.Button.WrapContent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="MediaAlbum.TextButton" parent="Widget.AppCompat.Button.ButtonBar.AlertDialog" />
+
+    <style name="MediaAlbum.TextButton.WrapContent">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <style name="MediaAlbum.TextButton.WrapContent.SheetBottom">
+        <item name="android:layout_centerVertical">true</item>
+        <item name="android:ellipsize">end</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:maxWidth">@dimen/album_dp_200</item>
+        <item name="android:textColor">@color/albumFontLight</item>
     </style>
 
 </resources>
