--- a/mediaalbum/src/main/res/layout/media_content_album.xml
+++ b/mediaalbum/src/main/res/layout/media_content_album.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright 2017 Yan Zhenjie.
+    Copyright 2018 Seo Jeonggyu.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -17,29 +17,29 @@
 <merge xmlns:android="http://schemas.android.com/apk/res/android">
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
-        style="@style/Album.WrapContent.WidthMatchParent"
+        style="@style/MediaAlbum.WrapContent.WidthMatchParent"
         android:layout_below="@id/app_bar_layout" />
 
     <RelativeLayout
-        style="@style/Album.MatchParent.SheetBottom"
+        style="@style/MediaAlbum.MatchParent.SheetBottom"
         android:layout_alignParentBottom="true"
-        android:background="@color/albumSheetBottom">
+        android:background="@color/mediaSheetBottom">
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_switch_dir"
-            style="@style/Album.TextButton.WrapContent.SheetBottom"
+            style="@style/MediaAlbum.TextButton.WrapContent.SheetBottom"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:drawableEnd="@drawable/album_abc_spinner_white"
-            android:drawableRight="@drawable/album_abc_spinner_white" />
+            android:drawableEnd="@drawable/media_abc_spinner_white"
+            android:drawableRight="@drawable/media_abc_spinner_white" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_preview"
-            style="@style/Album.TextButton.WrapContent.SheetBottom"
+            style="@style/MediaAlbum.TextButton.WrapContent.SheetBottom"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:drawableLeft="@drawable/album_ic_eye_white"
-            android:drawableStart="@drawable/album_ic_eye_white" />
+            android:drawableLeft="@drawable/media_ic_eye_white"
+            android:drawableStart="@drawable/media_ic_eye_white" />
     </RelativeLayout>
 
     <LinearLayout
