--- a/mediaalbum/src/main/res/layout/media_activity_album_light.xml
+++ b/mediaalbum/src/main/res/layout/media_activity_album_light.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright 2017 Yan Zhenjie.
+    Copyright 2018 Seo Jeonggyu.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -15,18 +15,18 @@
     limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Album.MatchParent"
-    android:background="@color/albumPageLight">
+    style="@style/MediaAlbum.MatchParent"
+    android:background="@color/mediaPageLight">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
-        style="@style/Album.AppBar.General">
+        style="@style/MediaAlbum.AppBar.General">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            style="@style/Album.Toolbar.Light" />
+            style="@style/MediaAlbum.Toolbar.Light" />
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/album_content_album"/>
+    <include layout="@layout/media_content_album"/>
 </RelativeLayout>
