--- a/mediaalbum/src/main/res/layout/media_activity_gallery.xml
+++ b/mediaalbum/src/main/res/layout/media_activity_gallery.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright 2017 YanZhenjie.
+    Copyright 2018 Seo Jeonggyu.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -15,73 +15,73 @@
     limitations under the License.
 -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Album.MatchParent"
-    android:background="@color/albumColorPrimaryBlack">
+    style="@style/MediaAlbum.MatchParent"
+    android:background="@color/mediaColorPrimaryBlack">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
-        style="@style/Album.MatchParent" />
+        style="@style/MediaAlbum.MatchParent" />
 
     <RelativeLayout
-        style="@style/Album.MatchParent"
+        style="@style/MediaAlbum.MatchParent"
         android:fitsSystemWindows="true">
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/app_bar_layout"
-            style="@style/Album.AppBar.General.Transparent">
+            style="@style/MediaAlbum.AppBar.General.Transparent">
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                style="@style/Album.Toolbar.Dark" />
+                style="@style/MediaAlbum.Toolbar.Dark" />
         </android.support.design.widget.AppBarLayout>
 
         <FrameLayout
-            style="@style/Album.WrapContent.WidthMatchParent"
+            style="@style/MediaAlbum.WrapContent.WidthMatchParent"
             android:layout_alignParentBottom="true">
 
             <RelativeLayout
                 android:id="@+id/layout_bottom"
-                style="@style/Album.MatchParent.SheetBottom"
-                android:background="@color/albumSheetBottom">
+                style="@style/MediaAlbum.MatchParent.SheetBottom"
+                android:background="@color/mediaSheetBottom">
 
                 <TextView
                     android:id="@+id/tv_duration"
-                    style="@style/Album.WrapContent"
+                    style="@style/MediaAlbum.WrapContent"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/album_dp_10"
-                    android:layout_marginStart="@dimen/album_dp_10"
-                    android:drawableLeft="@drawable/album_tag_video_white"
-                    android:drawablePadding="@dimen/album_dp_4"
-                    android:drawableStart="@drawable/album_tag_video_white"
+                    android:layout_marginLeft="@dimen/media_dp_10"
+                    android:layout_marginStart="@dimen/media_dp_10"
+                    android:drawableLeft="@drawable/media_tag_video_white"
+                    android:drawablePadding="@dimen/media_dp_4"
+                    android:drawableStart="@drawable/media_tag_video_white"
                     android:gravity="center"
                     android:maxLines="1"
-                    android:textColor="@color/albumFontLight"
+                    android:textColor="@color/mediaFontLight"
                     android:visibility="gone" />
 
                 <android.support.v7.widget.AppCompatCheckBox
                     android:id="@+id/check_box"
-                    style="@style/Album.CheckBox.WrapContent"
+                    style="@style/MediaAlbum.CheckBox.WrapContent"
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginEnd="@dimen/album_dp_10"
-                    android:layout_marginRight="@dimen/album_dp_10"
-                    android:text="@string/album_check"
-                    android:textColor="@color/albumFontLight"
-                    android:textSize="@dimen/album_sp_16" />
+                    android:layout_marginEnd="@dimen/media_dp_10"
+                    android:layout_marginRight="@dimen/media_dp_10"
+                    android:text="@string/media_check"
+                    android:textColor="@color/mediaFontLight"
+                    android:textSize="@dimen/media_sp_16" />
             </RelativeLayout>
 
             <FrameLayout
                 android:id="@+id/layout_layer"
-                style="@style/Album.MatchParent.SheetBottom"
-                android:background="@color/albumSheetLayer">
+                style="@style/MediaAlbum.MatchParent.SheetBottom"
+                android:background="@color/mediaSheetLayer">
 
                 <TextView
-                    style="@style/Album.WrapContent"
+                    style="@style/MediaAlbum.WrapContent"
                     android:layout_gravity="center"
-                    android:text="@string/album_item_unavailable"
-                    android:textColor="@color/albumFontLight"
-                    android:textSize="@dimen/album_sp_18" />
+                    android:text="@string/media_item_unavailable"
+                    android:textColor="@color/mediaFontLight"
+                    android:textSize="@dimen/media_sp_18" />
             </FrameLayout>
         </FrameLayout>
     </RelativeLayout>
