--- a/mediaalbum/src/main/res/layout/media_activity_null.xml
+++ b/mediaalbum/src/main/res/layout/media_activity_null.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright 2017 Yan Zhenjie.
+    Copyright 2018 Seo Jeonggyu.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -15,51 +15,51 @@
     limitations under the License.
 -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Album.MatchParent"
-    android:background="@color/albumPageLight">
+    style="@style/MediaAlbum.MatchParent"
+    android:background="@color/mediaPageLight">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/app_bar_layout"
-        style="@style/Album.AppBar.General">
+        style="@style/MediaAlbum.AppBar.General">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            style="@style/Album.Toolbar.Dark" />
+            style="@style/MediaAlbum.Toolbar.Dark" />
 
     </android.support.design.widget.AppBarLayout>
 
     <LinearLayout
-        style="@style/Album.MatchParent"
+        style="@style/MediaAlbum.MatchParent"
         android:layout_below="@+id/app_bar_layout"
         android:gravity="center"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_message"
-            style="@style/Album.WrapContent"
-            android:textColor="@color/albumFontHint" />
+            style="@style/MediaAlbum.WrapContent"
+            android:textColor="@color/mediaFontHint" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_camera_image"
-            style="@style/Album.Button.WrapContent"
-            android:layout_marginTop="@dimen/album_dp_15"
-            android:drawableLeft="@drawable/album_ic_image_camera_white"
-            android:drawablePadding="@dimen/album_dp_6"
-            android:drawableStart="@drawable/album_ic_image_camera_white"
+            style="@style/MediaAlbum.Button.WrapContent"
+            android:layout_marginTop="@dimen/media_dp_15"
+            android:drawableLeft="@drawable/media_ic_image_camera_white"
+            android:drawablePadding="@dimen/media_dp_6"
+            android:drawableStart="@drawable/media_ic_image_camera_white"
             android:gravity="center"
-            android:text="@string/album_camera_image_capture"
-            android:textColor="@color/albumFontLight" />
+            android:text="@string/media_camera_image_capture"
+            android:textColor="@color/mediaFontLight" />
 
         <android.support.v7.widget.AppCompatButton
             android:id="@+id/btn_camera_video"
-            style="@style/Album.Button.WrapContent"
-            android:layout_marginTop="@dimen/album_dp_15"
-            android:drawableLeft="@drawable/album_ic_video_camera_white"
-            android:drawablePadding="@dimen/album_dp_6"
-            android:drawableStart="@drawable/album_ic_video_camera_white"
+            style="@style/MediaAlbum.Button.WrapContent"
+            android:layout_marginTop="@dimen/media_dp_15"
+            android:drawableLeft="@drawable/media_ic_video_camera_white"
+            android:drawablePadding="@dimen/media_dp_6"
+            android:drawableStart="@drawable/media_ic_video_camera_white"
             android:gravity="center"
-            android:text="@string/album_camera_video_capture"
-            android:textColor="@color/albumFontLight" />
+            android:text="@string/media_camera_video_capture"
+            android:textColor="@color/mediaFontLight" />
 
     </LinearLayout>
 </RelativeLayout>
