--- a/mediaalbum/src/main/res/layout/media_item_dialog_folder.xml
+++ b/mediaalbum/src/main/res/layout/media_item_dialog_folder.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-    Copyright 2017 Yan Zhenjie.
+    Copyright 2018 Seo Jeonggyu.
 
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
@@ -16,22 +16,22 @@
 -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Album.WrapContent.WidthMatchParent"
+    style="@style/MediaAlbum.WrapContent.WidthMatchParent"
     android:background="?selectableItemBackground"
-    android:padding="@dimen/album_dp_10">
+    android:padding="@dimen/media_dp_10">
 
     <ImageView
         android:id="@+id/iv_gallery_preview_image"
-        android:layout_width="@dimen/album_dp_80"
-        android:layout_height="@dimen/album_dp_80"
+        android:layout_width="@dimen/media_dp_80"
+        android:layout_height="@dimen/media_dp_80"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:contentDescription="@string/album_title"
+        android:contentDescription="@string/media_title"
         android:scaleType="centerCrop"/>
 
     <android.support.v7.widget.AppCompatRadioButton
         android:id="@+id/rb_gallery_preview_check"
-        style="@style/Album.WrapContent"
+        style="@style/MediaAlbum.WrapContent"
         android:layout_alignParentEnd="true"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
@@ -39,12 +39,12 @@
 
     <TextView
         android:id="@+id/tv_gallery_preview_title"
-        style="@style/Album.WrapContent.WidthMatchParent"
+        style="@style/MediaAlbum.WrapContent.WidthMatchParent"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/album_dp_10"
-        android:layout_marginLeft="@dimen/album_dp_10"
-        android:layout_marginRight="@dimen/album_dp_10"
-        android:layout_marginStart="@dimen/album_dp_10"
+        android:layout_marginEnd="@dimen/media_dp_10"
+        android:layout_marginLeft="@dimen/media_dp_10"
+        android:layout_marginRight="@dimen/media_dp_10"
+        android:layout_marginStart="@dimen/media_dp_10"
         android:layout_toEndOf="@id/iv_gallery_preview_image"
         android:layout_toLeftOf="@id/rb_gallery_preview_check"
         android:layout_toRightOf="@id/iv_gallery_preview_image"
