--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    style="@style/MediaAlbum.MatchParent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <android.support.v4.widget.NestedScrollView
+        style="@style/MediaAlbum.MatchParent"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-</android.support.constraint.ConstraintLayout>
+        <LinearLayout
+            style="@style/MediaAlbum.WrapContent.WidthMatchParent"
+            android:orientation="vertical">
+
+            <android.support.v7.widget.AppCompatButton
+                android:id="@+id/btn_camera"
+                style="@style/MediaAlbum.Button.Main"
+                android:text="@string/btn_function_camera" />
+
+            <LinearLayout
+                style="@style/MediaAlbum.WrapContent.WidthMatchParent"
+                android:orientation="horizontal">
+
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/btn_image"
+                    style="@style/MediaAlbum.Button.Main"
+                    android:layout_weight="1"
+                    android:text="@string/btn_function_picture" />
+
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/btn_video"
+                    style="@style/MediaAlbum.Button.Main"
+                    android:layout_weight="1"
+                    android:text="@string/btn_function_video" />
+            </LinearLayout>
+
+        </LinearLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
