--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,45 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
+    <style name="MediaAlbum.AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColor">@color/mediaFontDark</item>
+        <item name="android:textSize">@dimen/media_sp_14</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
+
+    <style name="MediaAlbum.Theme.Toolbar" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="actionMenuTextColor">@color/mediaFontLight</item>
+    </style>
+
+    <style name="MediaAlbum.Theme.Toolbar.Popup" parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="actionMenuTextColor">@color/mediaFontDark</item>
+    </style>
+
+    <style name="Toolbar">
+        <item name="android:theme">@style/MediaAlbum.Theme.Toolbar</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">?actionBarSize</item>
+        <item name="android:background">?colorPrimary</item>
+        <item name="navigationIcon">@drawable/ic_back_white</item>
+        <item name="titleTextColor">@color/mediaFontLight</item>
+        <item name="subtitleTextColor">@color/mediaFontLight</item>
+        <item name="popupTheme">@style/MediaAlbum.Theme.Toolbar.Popup</item>
+    </style>
+
+    <style name="MediaAlbum.Theme.Button.Primary">
+        <item name="colorButtonNormal">@color/colorPrimary</item>
+        <item name="colorControlHighlight">@color/colorPrimaryDark</item>
+    </style>
+
+    <style name="MediaAlbum.Button.Main">
+        <item name="android:theme">@style/MediaAlbum.Theme.Button.Primary</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/media_dp_80</item>
+        <item name="android:textSize">@dimen/media_sp_20</item>
+        <item name="android:textColor">@color/mediaFontLight</item>
+        <item name="android:layout_margin">@dimen/media_dp_1</item>
     </style>
 
 </resources>
