--- a/mediaalbum/src/main/res/layout/album_dialog_loading.xml
+++ b/mediaalbum/src/main/res/layout/album_dialog_loading.xml
@@ -17,10 +17,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/MediaAlbum.WrapContent"
     android:gravity="center"
-    android:paddingBottom="@dimen/media_dp_20"
-    android:paddingLeft="@dimen/media_dp_35"
-    android:paddingRight="@dimen/media_dp_35"
-    android:paddingTop="@dimen/media_dp_20">
+    android:paddingBottom="@dimen/album_dp_20"
+    android:paddingLeft="@dimen/album_dp_35"
+    android:paddingRight="@dimen/album_dp_35"
+    android:paddingTop="@dimen/album_dp_20">
 
     <com.cnk24.meidaalbum.widget.ColorProgressBar
         android:id="@+id/progress_bar"
@@ -29,9 +29,9 @@
     <TextView
         android:id="@+id/tv_message"
         style="@style/MediaAlbum.WrapContent"
-        android:layout_marginLeft="@dimen/media_dp_20"
-        android:layout_marginStart="@dimen/media_dp_20"
-        android:textColor="@color/mediaFontHint"
-        android:textSize="@dimen/media_sp_16" />
+        android:layout_marginLeft="@dimen/album_dp_20"
+        android:layout_marginStart="@dimen/album_dp_20"
+        android:textColor="@color/albumFontHint"
+        android:textSize="@dimen/album_sp_16" />
 
 </LinearLayout>
