--- a/mediaalbum/src/main/res/menu/album_menu_gallery.xml
+++ b/mediaalbum/src/main/res/menu/album_menu_gallery.xml
@@ -19,12 +19,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/media_menu_camera_image"
-        android:title="@string/media_camera_image_capture"
-        app:showAsAction="always|withText"/>
-
-    <item
-        android:id="@+id/media_menu_camera_video"
-        android:title="@string/media_camera_video_capture"
+        android:id="@+id/album_menu_finish"
+        android:title="@string/media_menu_finish"
         app:showAsAction="always|withText"/>
 </menu>
