--- a/mediaalbum/src/main/res/layout/album_activity_album_light.xml
+++ b/mediaalbum/src/main/res/layout/album_activity_album_light.xml
@@ -14,10 +14,19 @@
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
-<android.support.v7.widget.RecyclerView
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/rv_content_list"
-    style="@style/MediaAlbum.WrapContent.WidthMatchParent"
-    android:background="@color/mediaPageLight"
-    app:behavior_hideable="true"/>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    style="@style/MediaAlbum.MatchParent"
+    android:background="@color/albumPageLight">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/app_bar_layout"
+        style="@style/MediaAlbum.AppBar.General">
+
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            style="@style/MediaAlbum.Toolbar.Light" />
+
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/album_content_album"/>
+</RelativeLayout>
