--- a/mediaalbum/src/main/res/layout/album_activity_gallery.xml
+++ b/mediaalbum/src/main/res/layout/album_activity_gallery.xml
@@ -16,7 +16,7 @@
 -->
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/MediaAlbum.MatchParent"
-    android:background="@color/mediaColorPrimaryBlack">
+    android:background="@color/albumColorPrimaryBlack">
 
     <android.support.v4.view.ViewPager
         android:id="@+id/view_pager"
@@ -42,20 +42,20 @@
             <RelativeLayout
                 android:id="@+id/layout_bottom"
                 style="@style/MediaAlbum.MatchParent.SheetBottom"
-                android:background="@color/mediaSheetBottom">
+                android:background="@color/albumSheetBottom">
 
                 <TextView
                     android:id="@+id/tv_duration"
                     style="@style/MediaAlbum.WrapContent"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="@dimen/media_dp_10"
-                    android:layout_marginStart="@dimen/media_dp_10"
-                    android:drawableLeft="@drawable/media_tag_video_white"
-                    android:drawablePadding="@dimen/media_dp_4"
-                    android:drawableStart="@drawable/media_tag_video_white"
+                    android:layout_marginLeft="@dimen/album_dp_10"
+                    android:layout_marginStart="@dimen/album_dp_10"
+                    android:drawableLeft="@drawable/album_tag_video_white"
+                    android:drawablePadding="@dimen/album_dp_4"
+                    android:drawableStart="@drawable/album_tag_video_white"
                     android:gravity="center"
                     android:maxLines="1"
-                    android:textColor="@color/mediaFontLight"
+                    android:textColor="@color/albumFontLight"
                     android:visibility="gone" />
 
                 <android.support.v7.widget.AppCompatCheckBox
@@ -64,24 +64,24 @@
                     android:layout_alignParentEnd="true"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginEnd="@dimen/media_dp_10"
-                    android:layout_marginRight="@dimen/media_dp_10"
+                    android:layout_marginEnd="@dimen/album_dp_10"
+                    android:layout_marginRight="@dimen/album_dp_10"
                     android:text="@string/media_check"
-                    android:textColor="@color/mediaFontLight"
-                    android:textSize="@dimen/media_sp_16" />
+                    android:textColor="@color/albumFontLight"
+                    android:textSize="@dimen/album_sp_16" />
             </RelativeLayout>
 
             <FrameLayout
                 android:id="@+id/layout_layer"
                 style="@style/MediaAlbum.MatchParent.SheetBottom"
-                android:background="@color/mediaSheetLayer">
+                android:background="@color/albumSheetLayer">
 
                 <TextView
                     style="@style/MediaAlbum.WrapContent"
                     android:layout_gravity="center"
                     android:text="@string/media_item_unavailable"
-                    android:textColor="@color/mediaFontLight"
-                    android:textSize="@dimen/media_sp_18" />
+                    android:textColor="@color/albumFontLight"
+                    android:textSize="@dimen/album_sp_18" />
             </FrameLayout>
         </FrameLayout>
     </RelativeLayout>
