--- a/mediaalbum/src/main/res/layout/album_item_content_video.xml
+++ b/mediaalbum/src/main/res/layout/album_item_content_video.xml
@@ -20,7 +20,7 @@
     <RelativeLayout style="@style/MediaAlbum.MatchParent">
 
         <ImageView
-            android:id="@+id/iv_media_content_image"
+            android:id="@+id/iv_album_content_image"
             style="@style/MediaAlbum.MatchParent"
             android:contentDescription="@string/media_title"
             android:scaleType="centerCrop" />
@@ -35,20 +35,34 @@
                 style="@style/MediaAlbum.CheckBox.WrapContent" />
         </com.cnk24.mediaalbum.widget.TransferLayout>
 
+        <TextView
+            android:id="@+id/tv_duration"
+            style="@style/MediaAlbum.WrapContent"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/album_dp_6"
+            android:layout_marginLeft="@dimen/album_dp_6"
+            android:layout_marginStart="@dimen/album_dp_6"
+            android:drawableLeft="@drawable/album_tag_video_white"
+            android:drawablePadding="@dimen/album_dp_4"
+            android:drawableStart="@drawable/album_tag_video_white"
+            android:ellipsize="end"
+            android:gravity="center"
+            android:maxLines="1"
+            android:textColor="@color/albumFontLight" />
+
     </RelativeLayout>
 
     <FrameLayout
         android:id="@+id/layout_layer"
         style="@style/MediaAlbum.MatchParent"
-        android:background="@color/mediaSheetLayer">
+        android:background="@color/albumSheetLayer">
 
         <TextView
             style="@style/MediaAlbum.WrapContent"
             android:layout_gravity="center"
             android:text="@string/media_item_unavailable"
-            android:textColor="@color/mediaFontLight"
-            android:textSize="@dimen/media_sp_16" />
+            android:textColor="@color/albumFontLight"
+            android:textSize="@dimen/album_sp_16" />
 
     </FrameLayout>
-
 </com.cnk24.mediaalbum.widget.SquareCardView>
