--- a/mediaalbum/src/main/res/layout/album_item_dialog_folder.xml
+++ b/mediaalbum/src/main/res/layout/album_item_dialog_folder.xml
@@ -18,12 +18,12 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     style="@style/MediaAlbum.WrapContent.WidthMatchParent"
     android:background="?selectableItemBackground"
-    android:padding="@dimen/media_dp_10">
+    android:padding="@dimen/album_dp_10">
 
     <ImageView
         android:id="@+id/iv_gallery_preview_image"
-        android:layout_width="@dimen/media_dp_80"
-        android:layout_height="@dimen/media_dp_80"
+        android:layout_width="@dimen/album_dp_80"
+        android:layout_height="@dimen/album_dp_80"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:contentDescription="@string/media_title"
@@ -41,10 +41,10 @@
         android:id="@+id/tv_gallery_preview_title"
         style="@style/MediaAlbum.WrapContent.WidthMatchParent"
         android:layout_centerVertical="true"
-        android:layout_marginEnd="@dimen/media_dp_10"
-        android:layout_marginLeft="@dimen/media_dp_10"
-        android:layout_marginRight="@dimen/media_dp_10"
-        android:layout_marginStart="@dimen/media_dp_10"
+        android:layout_marginEnd="@dimen/album_dp_10"
+        android:layout_marginLeft="@dimen/album_dp_10"
+        android:layout_marginRight="@dimen/album_dp_10"
+        android:layout_marginStart="@dimen/album_dp_10"
         android:layout_toEndOf="@id/iv_gallery_preview_image"
         android:layout_toLeftOf="@id/rb_gallery_preview_check"
         android:layout_toRightOf="@id/iv_gallery_preview_image"
