--- a/mediaalbum/src/main/res/values/colors.xml
+++ b/mediaalbum/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
 
-        http://www.apache.org/licenses/LICENSE-2.0
+       http://www.apache.org/licenses/LICENSE-2.0
 
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
@@ -15,21 +15,21 @@
     limitations under the License.
 -->
 <resources>
-    <color name="mediaColorPrimary">#2196F3</color>
-    <color name="mediaColorPrimaryDark">#1E88E5</color>
-    <color name="mediaColorPrimaryBlack">#2B2B2B</color>
+    <color name="albumColorPrimary">#2196F3</color>
+    <color name="albumColorPrimaryDark">#1E88E5</color>
+    <color name="albumColorPrimaryBlack">#2B2B2B</color>
 
-    <color name="mediaPageLight">#FFF</color>
-    <color name="mediaTransparent">#0000</color>
+    <color name="albumPageLight">#FFF</color>
+    <color name="albumTransparent">#0000</color>
 
-    <color name="mediaFontHint">#808080</color>
-    <color name="mediaFontLight">#FFF</color>
-    <color name="mediaFontDark">#333</color>
+    <color name="albumFontHint">#808080</color>
+    <color name="albumFontLight">#FFF</color>
+    <color name="albumFontDark">#333</color>
 
-    <color name="mediaIconDark">#333</color>
-    <color name="mediaLoadingDark">#333</color>
-    <color name="mediaSelectorNormal">#E0E0E0</color>
+    <color name="albumIconDark">#333</color>
+    <color name="albumLoadingDark">#333</color>
+    <color name="albumSelectorNormal">#E0E0E0</color>
 
-    <color name="mediaSheetBottom">#992B2B2B</color>
-    <color name="mediaSheetLayer">#EE2B2B2B</color>
+    <color name="albumSheetBottom">#992B2B2B</color>
+    <color name="albumSheetLayer">#EE2B2B2B</color>
 </resources>
