--- a/mediaalbum/src/main/res/values/styles.xml
+++ b/mediaalbum/src/main/res/values/styles.xml
@@ -26,7 +26,7 @@
         <item name="android:windowActionBar">false</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowDisablePreview">true</item>
-        <item name="android:windowBackground">@color/mediaTransparent</item>
+        <item name="android:windowBackground">@color/albumTransparent</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
@@ -44,7 +44,7 @@
 
     <style name="MediaAlbum.MatchParent.SheetBottom">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/media_dp_45</item>
+        <item name="android:layout_height">@dimen/album_dp_45</item>
     </style>
 
     <style name="MediaAlbum.WrapContent">
@@ -58,11 +58,11 @@
 
     <style name="MediaAlbum.WrapContent.Transfer">
         <item name="android:clickable">true</item>
-        <item name="android:padding">@dimen/media_dp_10</item>
+        <item name="android:padding">@dimen/album_dp_10</item>
     </style>
 
     <style name="MediaAlbum.AppBar">
-        <item name="android:background">@color/mediaTransparent</item>
+        <item name="android:background">@color/albumTransparent</item>
     </style>
 
     <style name="MediaAlbum.AppBar.General">
@@ -71,23 +71,23 @@
     </style>
 
     <style name="MediaAlbum.AppBar.General.Transparent">
-        <item name="elevation">@dimen/media_dp_0</item>
+        <item name="elevation">@dimen/album_dp_0</item>
     </style>
 
     <style name="MediaAlbum.Theme.Toolbar" />
 
     <style name="MediaAlbum.Theme.Toolbar.Dark" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
-        <item name="actionMenuTextColor">@color/mediaFontLight</item>
+        <item name="actionMenuTextColor">@color/albumFontLight</item>
         <item name="textAllCaps">false</item>
     </style>
 
     <style name="MediaAlbum.Theme.Toolbar.Light" parent="ThemeOverlay.AppCompat.Light">
-        <item name="actionMenuTextColor">@color/mediaFontDark</item>
+        <item name="actionMenuTextColor">@color/albumFontDark</item>
         <item name="textAllCaps">false</item>
     </style>
 
     <style name="MediaAlbum.Theme.Toolbar.Popup" parent="ThemeOverlay.AppCompat.Light">
-        <item name="actionMenuTextColor">@color/mediaFontDark</item>
+        <item name="actionMenuTextColor">@color/albumFontDark</item>
         <item name="textAllCaps">false</item>
     </style>
 
@@ -99,22 +99,22 @@
 
     <style name="MediaAlbum.Toolbar.Dark">
         <item name="android:theme">@style/MediaAlbum.Theme.Toolbar.Dark</item>
-        <item name="titleTextColor">@color/mediaFontLight</item>
-        <item name="subtitleTextColor">@color/mediaFontLight</item>
+        <item name="titleTextColor">@color/albumFontLight</item>
+        <item name="subtitleTextColor">@color/albumFontLight</item>
     </style>
 
     <style name="MediaAlbum.Toolbar.Light">
         <item name="android:theme">@style/MediaAlbum.Theme.Toolbar.Light</item>
-        <item name="titleTextColor">@color/mediaFontDark</item>
-        <item name="subtitleTextColor">@color/mediaFontDark</item>
+        <item name="titleTextColor">@color/albumFontDark</item>
+        <item name="subtitleTextColor">@color/albumFontDark</item>
     </style>
 
     <style name="MediaAlbum.Item" />
 
     <style name="MediaAlbum.Item.Card">
         <item name="android:foreground">?selectableItemBackground</item>
-        <item name="cardCornerRadius">@dimen/media_dp_2</item>
-        <item name="cardElevation">@dimen/media_dp_2</item>
+        <item name="cardCornerRadius">@dimen/album_dp_2</item>
+        <item name="cardElevation">@dimen/album_dp_2</item>
         <item name="cardPreventCornerOverlap">false</item>
     </style>
 
@@ -138,7 +138,7 @@
     </style>
 
     <style name="MediaAlbum.Dialog.Folder">
-        <item name="android:windowBackground">@color/mediaTransparent</item>
+        <item name="android:windowBackground">@color/albumTransparent</item>
         <item name="android:windowIsFloating">false</item>
         <item name="android:windowFullscreen">true</item>
     </style>
@@ -146,12 +146,12 @@
     <style name="MediaAlbum.Progress" parent="Widget.AppCompat.ProgressBar" />
 
     <style name="MediaAlbum.Progress.Loading">
-        <item name="android:minWidth">@dimen/media_dp_40</item>
-        <item name="android:maxWidth">@dimen/media_dp_40</item>
-        <item name="android:minHeight">@dimen/media_dp_40</item>
-        <item name="android:maxHeight">@dimen/media_dp_40</item>
-        <item name="android:layout_width">@dimen/media_dp_40</item>
-        <item name="android:layout_height">@dimen/media_dp_40</item>
+        <item name="android:minWidth">@dimen/album_dp_40</item>
+        <item name="android:maxWidth">@dimen/album_dp_40</item>
+        <item name="android:minHeight">@dimen/album_dp_40</item>
+        <item name="android:maxHeight">@dimen/album_dp_40</item>
+        <item name="android:layout_width">@dimen/album_dp_40</item>
+        <item name="android:layout_height">@dimen/album_dp_40</item>
     </style>
 
     <style name="MediaAlbum.Theme.Button" parent="@style/Theme.AppCompat.Light" />
@@ -176,8 +176,8 @@
         <item name="android:layout_centerVertical">true</item>
         <item name="android:ellipsize">end</item>
         <item name="android:maxLines">1</item>
-        <item name="android:maxWidth">@dimen/media_dp_200</item>
-        <item name="android:textColor">@color/mediaFontLight</item>
+        <item name="android:maxWidth">@dimen/album_dp_200</item>
+        <item name="android:textColor">@color/albumFontLight</item>
     </style>
 
 </resources>
