--- a/app/src/main/res/layout/activity_list_content.xml
+++ b/app/src/main/res/layout/activity_list_content.xml
@@ -23,7 +23,7 @@
     <TextView
         android:id="@+id/tv_message"
         style="@style/MediaAlbum.WrapContent"
-        android:layout_margin="@dimen/media_dp_10"
+        android:layout_margin="@dimen/album_dp_10"
         android:text="@string/hint_image_preview_click"
         android:visibility="gone" />
 
@@ -34,5 +34,5 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler_view"
         style="@style/MediaAlbum.WrapContent.WidthMatchParent"
-        android:layout_marginTop="@dimen/media_dp_10" />
+        android:layout_marginTop="@dimen/album_dp_10" />
 </LinearLayout>
