--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,17 +4,17 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="android:textColor">@color/mediaFontDark</item>
-        <item name="android:textSize">@dimen/media_sp_14</item>
+        <item name="android:textColor">@color/albumFontDark</item>
+        <item name="android:textSize">@dimen/album_sp_14</item>
         <item name="android:textAllCaps">false</item>
     </style>
 
     <style name="MediaAlbum.Theme.Toolbar" parent="ThemeOverlay.AppCompat.ActionBar">
-        <item name="actionMenuTextColor">@color/mediaFontLight</item>
+        <item name="actionMenuTextColor">@color/albumFontLight</item>
     </style>
 
     <style name="MediaAlbum.Theme.Toolbar.Popup" parent="ThemeOverlay.AppCompat.ActionBar">
-        <item name="actionMenuTextColor">@color/mediaFontDark</item>
+        <item name="actionMenuTextColor">@color/albumFontDark</item>
     </style>
 
     <style name="Toolbar">
@@ -23,8 +23,8 @@
         <item name="android:layout_height">?actionBarSize</item>
         <item name="android:background">?colorPrimary</item>
         <item name="navigationIcon">@drawable/ic_back_white</item>
-        <item name="titleTextColor">@color/mediaFontLight</item>
-        <item name="subtitleTextColor">@color/mediaFontLight</item>
+        <item name="titleTextColor">@color/albumFontLight</item>
+        <item name="subtitleTextColor">@color/albumFontLight</item>
         <item name="popupTheme">@style/MediaAlbum.Theme.Toolbar.Popup</item>
     </style>
 
@@ -36,10 +36,10 @@
     <style name="MediaAlbum.Button.Main">
         <item name="android:theme">@style/MediaAlbum.Theme.Button.Primary</item>
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">@dimen/media_dp_80</item>
-        <item name="android:textSize">@dimen/media_sp_20</item>
-        <item name="android:textColor">@color/mediaFontLight</item>
-        <item name="android:layout_margin">@dimen/media_dp_1</item>
+        <item name="android:layout_height">@dimen/album_dp_80</item>
+        <item name="android:textSize">@dimen/album_sp_20</item>
+        <item name="android:textColor">@color/albumFontLight</item>
+        <item name="android:layout_margin">@dimen/album_dp_1</item>
     </style>
 
 </resources>
