--- a/app/src/main/res/layout/activity_list_content.xml
+++ b/app/src/main/res/layout/activity_list_content.xml
@@ -20,12 +20,12 @@
     android:orientation="vertical"
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <TextView
+    <!--TextView
         android:id="@+id/tv_message"
         style="@style/MediaAlbum.WrapContent"
         android:layout_margin="@dimen/album_dp_10"
         android:text="@string/hint_image_preview_click"
-        android:visibility="gone" />
+        android:visibility="gone" /-->
 
     <ImageView
         android:id="@+id/image_view"
