--- a/mediaalbum/src/main/res/layout/album_dialog_loading.xml
+++ b/mediaalbum/src/main/res/layout/album_dialog_loading.xml
@@ -22,7 +22,7 @@
     android:paddingRight="@dimen/album_dp_35"
     android:paddingTop="@dimen/album_dp_20">
 
-    <com.cnk24.meidaalbum.widget.ColorProgressBar
+    <com.cnk24.mediaalbum.widget.ColorProgressBar
         android:id="@+id/progress_bar"
         style="@style/MediaAlbum.Progress.Loading" />
 
