--- a/mediaalbum/src/main/res/layout/album_item_content_video.xml
+++ b/mediaalbum/src/main/res/layout/album_item_content_video.xml
@@ -26,13 +26,15 @@
             android:scaleType="centerCrop" />
 
         <com.cnk24.mediaalbum.widget.TransferLayout
-            style="@style/MediaAlbum.WrapContent.Transfer"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true">
+            android:clickable="true"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <android.support.v7.widget.AppCompatCheckBox
                 android:id="@+id/check_box"
-                style="@style/MediaAlbum.CheckBox.WrapContent" />
+                android:layout_gravity="right"
+                style="@style/MediaAlbum.CheckBox.Scale" />
+
         </com.cnk24.mediaalbum.widget.TransferLayout>
 
         <TextView
