--- a/mediaalbum/src/main/res/values/styles.xml
+++ b/mediaalbum/src/main/res/values/styles.xml
@@ -130,6 +130,13 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="MediaAlbum.CheckBox.Scale">
+        <item name="android:scaleX">0.7</item>
+        <item name="android:scaleY">0.7</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
     <style name="MediaAlbum.Dialog" parent="Theme.AppCompat.Light.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowIsFloating">true</item>
