--- a/mediaalbum/src/main/res/layout/album_activity_gallery.xml
+++ b/mediaalbum/src/main/res/layout/album_activity_gallery.xml
@@ -23,6 +23,7 @@
         style="@style/MediaAlbum.MatchParent" />
 
     <RelativeLayout
+        android:id="@+id/relative_layout"
         style="@style/MediaAlbum.MatchParent"
         android:fitsSystemWindows="true">
 
