--- a/app/src/main/res/layout/item_content_video.xml
+++ b/app/src/main/res/layout/item_content_video.xml
@@ -37,4 +37,21 @@
         android:maxLines="1"
         android:textColor="@color/albumFontLight" />
 
+    <com.cnk24.mediaalbum.widget.TransferLayout
+        android:id="@+id/check_layer"
+        android:alpha="0.0"
+        android:background="@color/albumSheetLayer"
+        style="@style/MediaAlbum.MatchParent" />
+
+    <com.cnk24.mediaalbum.widget.TransferLayout
+        android:clickable="true"
+        style="@style/MediaAlbum.MatchParent" >
+
+        <android.support.v7.widget.AppCompatCheckBox
+            android:id="@+id/check_box"
+            android:layout_gravity="right"
+            style="@style/MediaAlbum.CheckBox.Scale" />
+
+    </com.cnk24.mediaalbum.widget.TransferLayout>
+
 </com.cnk24.mediaalbum.widget.SquareRelativeLayout>
