--- a/app/src/main/res/menu/menu_album_image.xml
+++ b/app/src/main/res/menu/menu_album_image.xml
@@ -18,4 +18,27 @@
         android:title="@string/menu_image_select"
         app:showAsAction="always|withText"/>
 
+    <item
+        android:id="@+id/menu_select"
+        android:icon="@drawable/ic_select_white"
+        android:orderInCategory="100"
+        android:title="@string/menu_image_select"
+        app:showAsAction="always|withText"/>
+
+    <item
+        android:id="@+id/menu_delete"
+        android:icon="@drawable/ic_delete_white"
+        android:orderInCategory="100"
+        android:visible="false"
+        android:title="@string/menu_image_select"
+        app:showAsAction="always|withText"/>
+
+    <item
+        android:id="@+id/menu_cancel"
+        android:icon="@drawable/ic_cancel_white"
+        android:orderInCategory="100"
+        android:visible="false"
+        android:title="@string/menu_image_select"
+        app:showAsAction="always|withText"/>
+
 </menu>
